[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=6.0.1",
    "pillow>=12.1.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "django-stubs[compatible-mypy]>=5.2.9",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
[tool.django-stubs]
django_settings_module = "blog_api.settings"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
